<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/SingInLeyoutBack"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/SingInLeyoutFront"
        android:layout_margin="40dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/supermen"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22dp"
            android:text="@string/singInLogin"
            android:textColor="@color/SingInTextcolor"/>

        <EditText
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/singInHintLogin"
            android:textColorHint="@color/SingInHintTextcolor"
            android:gravity="center"
            android:textColor="@color/SingInTextcolor"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22dp"
            android:text="@string/singInPassword"
            android:textColor="@color/SingInTextcolor"/>

        <EditText
            android:id="@+id/pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/singInHintPassword"
            android:textColorHint="@color/SingInHintTextcolor"
            android:gravity="center"
            android:inputType="textWebPassword"/>
        <Button
            android:id="@+id/singin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/sing_in"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/SingInLeyoutBack"
            android:textColor="@color/SingInLeyoutFront"/>

        <TextView
            android:id="@+id/singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17dp"
            android:text="@string/sing_up"
            android:textColor="@color/SingInTextcolor"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17dp"
            android:text="@string/forgot_password"
            android:textColor="@color/SingInTextcolor"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>